<resources>
<string name="Mod">Changement de mot de passe:</string>
<string name="motdepasseactuelle">mot de passe actuelle:</string>
<string name="Motdepasse">Mot de passe:</string>
<string name="ConfermationMotdepasse">Confermation Mot de passe:</string>
<string name="InformationBancaire">Information Bancaire:</string>
<string name="Nomdebanque">Nom de banque:</string>
<string name="BIC">BIC :</string>
<string name="IBAN">IBAN:</string>
<string name="ModiferDevise">Modifer Devise:</string>
<string name="Deviseactuel">Devise actuel :</string>
<string name="ChoisivotreDevise">Choisi votre Devise </string>
<string name="Valider">Valider</string>
<string name="Email">E-mail</string>
<string name="mdp">Mot de passe</string>
<string name="mdpO">Mot de passe oublié</string>
<string name="btnconncter">Se connecter</string>
<string name="Creercmpt">Créer votre compte</string>
<string name="Nom">Nom: </string>
<string name="Telephone">Télephone:</string>
<string name="EmailClinet">Email:</string>
<string name="Adresse">Adresse:</string>
<string name="CodePostal">Code postal:</string>
<string name="Pays">Pays:</string>
<string name="Ville">Ville:</string>
<string name="Enregistrer">Enregistrer</string>
<string name="Nomcl1">Nom:</string>
<string name="Emailcl1">E-mail:</string>
<string name="adressecl1">Adresse:</string>
<string name="Telephonecl1">Telephone:</string>
<string name="CodePostalcl1">Code Postal :</string>
<string name="Villecl1">Ville:</string>
<string name="Payscl1">Pays:</string>
<string name="btncl1suivant">Suivant</string>
<string name="Nomdebanquecl2">Nom de banque:</string>
<string name="BICcl2">BIC:</string>
<string name="IBANcl2">IBAN:</string>
<string name="btncl2suivant">Suivant</string>
<string name="btncl2precedant">Précédant</string>
<string name="getlogocl3">Télécharger</string>
<string name="btncl3suivant">Suivant</string>
<string name="btncl3precedant">Précédant</string>
<string name="txtMotdepassecl4">Mot de passe :</string>
<string name="mdpcl4">Mot de passe:</string>
<string name="cmdpcl4">Confirmation Mot de passe:</string>
<string name="btnpreccl4">Précédant</string>
<string name="btnokcl4">ok</string>
<string name="selectarticlefact">Selection Article ou service</string>
<string name="Typeproduitfact">Type Produit :</string>
<string name="Articlefact">Article :</string>
<string name="Prixufact">Prix Unitaire :</string>
<string name="Qtefact">Quantité :</string>
<string name="Remisefact">Remise :</string>
<string name="TVAfact">Tva :</string>
<string name="Enregistrerfact">Enregistrer</string>
<string name="phraseFacture">clic pour modifier les informaions</string>
<string name="IDFacture">Facture N°:</string>
<string name="EntrepriseFacture">Entreprise</string>
<string name="DatecreationFacture">Date Création</string>
<string name="DatedeEchenceFacture">Date échence</string>
<string name="ChoisirvotreclientFacture"> Choisir votre client</string>
<string name="AjouterArticleServiceFacture"> Ajouter Article/Service</string>
<string name="SousTotalFacture"> Sous Total:</string>
<string name="RemiseFacture"> Remise :</string>
<string name="TaxeFacture"> TVA:</string>
<string name="TotalFacture"> Total:</string>
<string name="ModedepaiementFacture"> Mode de paiement :</string>
<string name="NoteFacture">Note: </string>
<string name="SignatureFacture"> Signature </string>
<string name="IDFactureDetail">Facture N°:</string>
<string name="EntrepriseDetailFacture"> Entreprise :</string>
<string name="DatefacturationDetailFacture"> Date Facturation :</string>
<string name="DateValiditeDetailFacture"> Date échence :</string>
<string name="DevisEncours"> Devis Encours</string>
<string name="DevisValide"> Devis Validé</string>
<string name="FactureNonpayee">Facture Non payée</string>
<string name="FacturePayee">Facture Payée</string>
<string name="Balance">Balance</string>
<string name="TotaldesFacturesCree"> Total des Factures \n Généré</string>
<string name="TotalNonPayee"> Total Non Payée</string>
<string name="TotalPayee"> Total Payée</string>
<string name="TotaldesdevisGree"> Total des devis Généré</string>
<string name="TotalDevisEncours"> Total Devis \n Encours</string>
<string name="TotalDevisValide"> Total Devis \n Validé</string>
<string name="phraseFactureUpdate">clic pour modifier les informaions</string>
<string name="IDFactureUpdate">Facture N°:</string>
<string name="EntrepriseFactureUpdate">Entreprise</string>
<string name="DatecreationFactureUpdate">Date Facturation</string>
<string name="DatedeEchenceFactureUpdate">Date échence</string>
<string name="ChoisirvotreclientFactureUpdate"> Choisir votre client</string>
<string name="AjouterArticleServiceFactureUpdate"> Ajouter Article/Service</string>
<string name="SousTotalFactureUpdate"> Sous Total:</string>
<string name="RemiseFactureUpdate"> Remise :</string>
<string name="TaxeFactureUpdate"> TVA:</string>
<string name="TotalFactureUpdate"> Total:</string>
<string name="ModedepaiementFactureUpdate"> Mode de paiement :</string>
<string name="NoteFactureUpdate">Note: </string>
<string name="SignatureFactureUpdate"> Signature </string>
<string name="Motdepasseoublie "> Mot de passe oublié </string>
<string name="Emailo"> Email:</string>
<string name="Envoyero"> Envoyer:</string>
<string name="Codevalidation"> Code validation:</string>
<string name="phraseDevisUpdate">clic pour modifier les informaions</string>
<string name="IDDevisUpdate">Devis N°:</string>
<string name="EntrepriseDevisUpdate">Entreprise</string>
<string name="DatecreationDevisUpdate">Date Création</string>
<string name="DatedevalidationDevisUpdate">Date validation</string>
<string name="ChoisirvotreclientDevisUpdate"> Choisir votre client</string>
<string name="AjouterArticleServiceDevisUpdate"> Ajouter Article/Service</string>
<string name="SousTotalDevisUpdate"> Sous Total:</string>
<string name="RemiseDevisUpdate"> Remise :</string>
<string name="TaxeDevisUpdate"> TVA:</string>
<string name="TotalDevisUpdate"> Total:</string>
<string name="ModedepaiementDevisUpdate"> Mode de paiement :</string>
<string name="NoteDevisUpdate">Note: </string>
<string name="transfer"> Transféré au facture</string>
<string name="IDDevisDetail">Devis N°:</string>
<string name="EntrepriseDetailDevis"> Entreprise :</string>
<string name="DatecreationDetail"> Date Création:</string>
<string name="DateValiditeDetail"> Date Validité :</string>
<string name="ModifierClient"> Modifier client :</string>
<string name="ChangerDevise"> Change devise :</string>
<string name="ChangerMotdepasse"> Changer Mot de passe :</string>
<string name="ChangerDonnesBancaire"> Changer donner bancaire</string>
<string name="phraseDevis">clic pour modifier les informaions</string>
<string name="IDDevis">Devis N°:</string>
<string name="EntrepriseDevis">Entreprise</string>
<string name="DatecreationDevis">Date Création</string>
<string name="DatedevalidationDevis">Date validation</string>
<string name="ChoisirvotreclientDevis"> Choisir votre client</string>
<string name="AjouterArticleServiceDevis"> Ajouter Article/Service</string>
<string name="SousTotalDevis"> Sous Total:</string>
<string name="RemiseDevis"> Remise :</string>
<string name="TaxeDevis"> TVA:</string>
<string name="TotalDevis"> Total:</string>
<string name="ModedepaiementDevis"> Mode de paiement :</string>
<string name="NoteDevis">Note: </string>
<string name="SignatureDevis"> Signature </string>
<string name="TypeP"> Type :</string>
<string name="NomproduitP"> Nom produit :</string>
<string name="PrixP"> Prix:</string>
<string name="TVAP"> TVA:</string>
<string name="EnregistrerP"> Enregistrer</string>
<string name="Qtelist">Qté</string>
<string name="prixlist">Prix </string>
<string name="DateEchence">Date échence</string>
<string name="Typetikp">Type</string>
<string name="Nomtikp">Nom</string>
<string name="Prixtikp">Prix</string>
<string name="Datevalidation">Date validation</string>
<string name="app_name">Facturation</string>
<string name="action_settings">Settings</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="speakers_tab_label">PDF</string>
<string name="sessions_tab_label">Facture</string>
<string name="ApplicationName">FingerPaint</string>
<string name="color_spinner_prompt">Color</string>
<string-array name="colors_array"><item>Red</item><item>Green</item><item>Blue</item><item>Cyan</item><item>Magenta</item><item>Yellow</item><item>Black</item><item>Gray</item><item>White</item></string-array>
<string name="width_spinner_prompt">Width</string>
<string-array name="widths_array"><item>Thin</item><item>Thinish</item><item>Medium</item><item>Thickish</item><item>Thick</item></string-array>
<string name="clearText">Clear</string>
<string-array name="Devise"><item>AED</item><item>AFN</item><item>ALL</item><item>AMD</item><item>AOA</item><item>ARS</item><item>AUD</item><item>AWG</item><item>AZN</item><item>BAM</item><item>BBD</item><item>BDT</item><item>BGN</item><item>BHD</item><item>BIF</item><item>BMD</item><item>BND</item><item>BOB</item><item>BRL</item><item>BSD</item><item>BTC</item><item>BTN</item><item>BWP</item><item>BYN</item><item>BZD</item><item>CAD</item><item>CDF</item><item>CHF</item><item>CLP</item><item>CNY</item><item>COP</item><item>CRC</item><item>CUP</item><item>CVE</item><item>CZK</item><item>DJF</item><item>DKK</item><item>DOP</item><item>DZD</item><item>EGP</item><item>ERN</item><item>ETB</item><item>ETH</item><item>EUR</item><item>FJD</item><item>FKP</item><item>GBP</item><item>GEL</item><item>GHS</item><item>GIP</item><item>GMD</item><item>GNF</item><item>GTQ</item><item>GYD</item><item>HKD</item><item>HNL</item><item>HRK</item><item>HTG</item><item>HUF</item><item>IDR</item><item>ILS</item><item>INR</item><item>IQD</item><item>IRR</item><item>ISK</item><item>JMD</item><item>JOD</item><item>JPY</item><item>KES</item><item>KGS</item><item>KHR</item><item>KMF</item><item>KPW</item><item>KRW</item><item>KWD</item><item>KYD</item><item>KZT</item><item>LAK</item><item>LBP</item><item>LKR</item><item>LRD</item><item>LSL</item><item>LTC</item><item>LYD</item><item>MAD</item><item>MDL</item><item>MGA</item><item>MKD</item><item>MMK</item><item>MNT</item><item>MOP</item><item>MUR</item><item>MVR</item><item>MWK</item><item>MXN</item><item>MYR</item><item>NAD</item><item>NGN</item><item>NIO</item><item>NOK</item><item>NPR</item><item>NZD</item><item>OMR</item><item>PAB</item><item>PEN</item><item>PGK</item><item>PHP</item><item>PKR</item><item>PLN</item><item>PYG</item><item>QAR</item><item>RON</item><item>RSD</item><item>RUB</item><item>RWF</item><item>SAR</item><item>SBD</item><item>SCR</item><item>SEK</item><item>SGD</item><item>SHP</item><item>SLL</item><item>SOS</item><item>SRD</item><item>SVC</item><item>SYP</item><item>SZL</item><item>THB</item><item>TND</item><item>TOP</item><item>TRY</item><item>TTD</item><item>TWD</item><item>TZS</item><item>UAH</item><item>UGX</item><item>USD</item><item>UYU</item><item>UZS</item><item>VND</item><item>VUV</item><item>WST</item><item>YER</item><item>ZAR</item></string-array>
<string-array name="Type"><item>Pourcentage</item><item>Montant</item></string-array>
<string-array name="ModePaimenet"><item>Chèque</item><item>virement bancaire</item><item>Espéce</item></string-array>
<string-array name="ClientType"><item>Personne Moral</item><item>Auto-entrepreneur</item></string-array>
<string-array name="Produit"><item>Produit</item><item>Service</item></string-array>
<string name="Banner_Ads1">ca-app-pub-2426289228107279/3421070760</string>
<string name="Banner_Ads33">ca-app-pub-2426289228107279/8083382260</string>
<string name="Banner_Ads34">ca-app-pub-2426289228107279/2639483893</string>
<string name="Banner_Ads47">ca-app-pub-2426289228107279/7009796137</string>
<string name="Banner_Ads48">ca-app-pub-2426289228107279/8814666549</string>
<string name="Banner_Ads49">ca-app-pub-2426289228107279/7501584878</string>
</resources>