<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/colorPrimary" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/linearLayout4" android:layout_weight="1"><TextView android:text="@string/Motdepasseoublie" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_margin="10dp" android:textColor="@color/colortexttext" /><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputLayout1"><com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/colortexttext" android:hint="@string/Emailo" android:id="@+id/textInputEditTextEmail" /></com.google.android.material.textfield.TextInputLayout><Button android:text="@string/Envoyero" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/buttonEnvoyercode" android:background="@drawable/s" android:textColor="@color/colortexttext" /></LinearLayout><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:textColor="@color/colortexttext" android:layout_height="wrap_content" android:id="@+id/textInputLayout2" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent" android:hint="@string/Codevalidation" android:textColor="@color/colortexttext" android:layout_height="wrap_content" android:id="@+id/textInputEditTextcodevalidation" /></com.google.android.material.textfield.TextInputLayout><Button android:text="@string/Valider" android:background="@drawable/s" android:textColor="@color/colortexttext" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/buttonvalidercode" android:layout_margin="10dp" /></LinearLayout></LinearLayout><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout5"><com.google.android.gms.ads.AdView ads:adUnitId="@string/Banner_Ads33" ads:adSize="350x50" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/adView1ob" /><com.google.android.gms.ads.AdView ads:adUnitId="@string/Banner_Ads34" ads:adSize="350x50" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/adView2ob" /></LinearLayout></LinearLayout>