<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:ads="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"><include android:id="@+id/toolbar" layout="@layout/toolbar" /><ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scrollView1" android:layout_weight="1"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" android:id="@id/linearLayoutGlobal" android:background="@color/colorPrimary"><com.google.android.gms.ads.AdView ads:adUnitId="@string/Banner_Ads47" ads:adSize="350x50" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/adView1Updatecl" /><com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_height="wrap_content" android:textColor="@android:color/white" android:id="@+id/textInputLayout1" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/Nom" android:id="@+id/textInputEditTextNomupdate" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputLayout2" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:hint="@string/Email" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputEditTextEmailupdate" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="match_parent" android:textColor="@android:color/white" android:layout_height="wrap_content" android:id="@+id/textInputLayout3" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:hint="@string/Email" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputEditTextAdresseupdate" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="match_parent" android:textColor="@android:color/white" android:layout_height="wrap_content" android:id="@+id/textInputLayout4" android:layout_margin="10dp"><EditText android:hint="@string/Telephone" android:textColor="@android:color/white" android:inputType="number" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextTelePhoneupdate" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="match_parent" android:textColor="@android:color/white" android:layout_height="wrap_content" android:id="@+id/textInputLayout5" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:hint="@string/CodePostal" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputEditTextCodePostalupdate" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="match_parent" android:textColor="@android:color/white" android:layout_height="wrap_content" android:id="@+id/textInputLayout6" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:hint="@string/Ville" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputEditTextVilleupdate" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_width="match_parent" android:textColor="@android:color/white" android:layout_height="wrap_content" android:id="@+id/textInputLayout7" android:layout_margin="10dp"><com.google.android.material.textfield.TextInputEditText android:hint="@string/Pays" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textInputEditTextPaysupdate" /></com.google.android.material.textfield.TextInputLayout><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_margin="10dp"><Button android:text="@string/Enregistrer" android:textColor="@color/colortexttext" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/buttonsuivantupdate" android:background="@drawable/s" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_weight="0" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1"><com.google.android.gms.ads.AdView ads:adUnitId="@string/Banner_Ads49" ads:adSize="350x50" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/adView2Updatecl" /></LinearLayout></LinearLayout></ScrollView><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><com.google.android.gms.ads.AdView ads:adUnitId="@string/Banner_Ads48" ads:adSize="350x50" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/adView12updatecl" android:layout_weight="0" /></LinearLayout></LinearLayout>